Add Indonesian translations for submission wizard and checklist confirmation

--- a/locale/id/locale.po
+++ b/locale/id/locale.po
@@ -2668,3 +2668,21 @@ msgstr "Lihat Pekerjaan"
 
 msgid "##navigation.tools.jobs.failed.view##"
 msgstr "Lihat Pekerjaan yang Gagal"
+
+msgid "##submission.wizard.title##"
+msgstr "Panduan Pengajuan Naskah"
+
+msgid "##submission.wizard.beforeStart##"
+msgstr "Sebelum Memulai Pengajuan"
+
+msgid "##default.submission.step.beforeYouBegin##"
+msgstr "Tahapan Persiapan Pengajuan Naskah Artikel Ilmiah"
+
+msgid "##submission.submit.submissionChecklistConfirm##"
+msgstr "Saya telah membaca dan menyetujui seluruh persyaratan dalam daftar periksa pengajuan."
+
+msgid "##submission.wizard.privacyConsent##"
+msgstr "Saya menyetujui kebijakan privasi jurnal ini dan memberikan izin untuk memproses data pribadi saya sebagaimana dijelaskan."
+
+msgid "##submission.wizard.start##"
+msgstr "Mulai Pengajuan"
