--- a/locale/id/author.po
+++ b/locale/id/author.po
@@ -304,3 +304,21 @@ msgstr "File Penulis"
 
 msgid "author.submit.authorSubmitLoginMessage"
 msgstr "Akun pengguna dibutuhkan untuk menyerahkan naskah ke jurnal ini. Hal ini memungkinkan editor kami untuk melacak penyerahan Anda dan menghubungi Anda saat status penyerahan Anda berubah, atau jika dibutuhkan informasi tambahan."
+
+msgid "##submission.wizard.title##"
+msgstr "Form Pengajuan Naskah"
+
+msgid "##submission.wizard.beforeStart##"
+msgstr "Sebelum Memulai Pengajuan"
+
+msgid "##default.submission.step.beforeYouBegin##"
+msgstr "Tahapan Persiapan Pengajuan Naskah Artikel Ilmiah"
+
+msgid "##submission.submit.submissionChecklistConfirm##"
+msgstr "Saya telah membaca dan menyetujui seluruh persyaratan dalam daftar periksa pengajuan."
+
+msgid "##submission.wizard.privacyConsent##"
+msgstr "Saya menyetujui kebijakan privasi jurnal ini dan memberikan izin untuk memproses data pribadi saya sebagaimana dijelaskan."
+
+msgid "##submission.wizard.start##"
+msgstr "Mulai Pengajuan"
