--- a/locale/id/editor.po
+++ b/locale/id/editor.po
@@ -491,3 +491,21 @@ msgstr "Gambar sampul"
 #~ msgstr ""
 #~ "Format gambar sampul invalid. Format yang diterima adalah .gif, .jpg, "
 #~ "atau .png."
+
+msgid "##submission.wizard.title##"
+msgstr "Form Pengajuan Naskah"
+
+msgid "##submission.wizard.beforeStart##"
+msgstr "Sebelum Memulai Pengajuan"
+
+msgid "##default.submission.step.beforeYouBegin##"
+msgstr "Tahapan Persiapan Pengajuan Naskah Artikel Ilmiah"
+
+msgid "##submission.submit.submissionChecklistConfirm##"
+msgstr "Saya telah membaca dan menyetujui seluruh persyaratan dalam daftar periksa pengajuan."
+
+msgid "##submission.wizard.privacyConsent##"
+msgstr "Saya menyetujui kebijakan privasi jurnal ini dan memberikan izin untuk memproses data pribadi saya sebagaimana dijelaskan."
+
+msgid "##submission.wizard.start##"
+msgstr "Mulai Pengajuan"
