--- a/locale/id/emails.po
+++ b/locale/id/emails.po
@@ -684,3 +684,21 @@ msgstr "Username atau Email"
 
 #~ msgid "emails.editorDecisionBackToCopyediting.subject"
 #~ msgstr "Naskah Anda telah dikembalikan ke tahap copyediting"
+
+msgid "##submission.wizard.title##"
+msgstr "Form Pengajuan Naskah"
+
+msgid "##submission.wizard.beforeStart##"
+msgstr "Sebelum Memulai Pengajuan"
+
+msgid "##default.submission.step.beforeYouBegin##"
+msgstr "Tahapan Persiapan Pengajuan Naskah Artikel Ilmiah"
+
+msgid "##submission.submit.submissionChecklistConfirm##"
+msgstr "Saya telah membaca dan menyetujui seluruh persyaratan dalam daftar periksa pengajuan."
+
+msgid "##submission.wizard.privacyConsent##"
+msgstr "Saya menyetujui kebijakan privasi jurnal ini dan memberikan izin untuk memproses data pribadi saya sebagaimana dijelaskan."
+
+msgid "##submission.wizard.start##"
+msgstr "Mulai Pengajuan"
